--- a/Setup/Vagrantfile
+++ b/Setup/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure("2") do |config|
 
   # create webserver
 	config.vm.define "web" do |web_config|
-      web_config.vm.box = "ubuntu/trusty64"
+      web_config.vm.box = "ubuntu/bionic64"
       web_config.vm.hostname = "webserver"
       web_config.vm.network "private_network", ip: "192.168.50.10"
       web_config.vm.synced_folder "website", "/home/vagrant/website"
