--- a/Setup/website/nginx.conf
+++ b/Setup/website/nginx.conf
@@ -1,36 +1,42 @@
 
-user www-data;
+user root;
+worker_processes auto;
 
-worker_processes 1;
-pid /var/run/nginx.pid;
-worker_rlimit_nofile 1024;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 512;
+    worker_connections 1024;
 }
 
 
 http {
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
-        tcp_nopush "on";
-        tcp_nodelay "on";
-        #keepalive_timeout "65";
-        access_log "/var/log/nginx/access.log";
-        error_log "/var/log/nginx/error.log";
-        server_tokens off;
-        types_hash_max_size 2048;
 
-        # https://philio.me/backend-server-host-name-as-a-custom-header-with-nginx/
-        add_header X-Backend-Server $hostname;
 
-        # disable cache used for testing
-        add_header Cache-Control private;
-        add_header Last-Modified "";
-        sendfile off;
-        expires off;
-        etag off;
+        ssl_certificate    /home/vagrant/httpsCert/server.crt;
+        ssl_certificate_key /home/vagrant/httpsCert/privatekey.pem;
+        ssl_session_cache   shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        access_log /var/log/nginx/access.log;
+
+        sendfile on;
+        #tcp_nopush "on";
+
+        keepalive_timeout 70;
 
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
+
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header    X-Content-Type-Options nosniff;
+        add_header    X-Frame-Options SAMEORIGIN;
+        add_header    X-XSS-Protection "1; mode=block";
+
+
+
+        server_tokens off;
 }
