--- a/Setup/Vagrantfile
+++ b/Setup/Vagrantfile
@@ -27,7 +27,7 @@ Vagrant.configure("2") do |config|
   # https://docs.vagrantup.com/v2/vagrantfile/tips.html
   (1..1).each do |i|
     config.vm.define "client#{i}" do |node|
-        node.vm.box = "ubuntu/trusty64"
+        node.vm.box = "ubuntu/xenial64"
         node.vm.hostname = "client#{i}"
         node.vm.network "private_network", ip: "192.168.50.#{20+i}"
         node.vm.synced_folder "client", "/home/vagrant/client"
