--- a/Setup/Vagrantfile
+++ b/Setup/Vagrantfile
@@ -7,11 +7,30 @@ Vagrant.configure("2") do |config|
 	config.vbguest.auto_update = true
   config.vm.box_check_update = false
 
+
+  # create firewall
+  config.vm.define "firewall" do |fire_config|
+      fire_config.vm.box = "ubuntu/bionic64"
+      fire_config.vm.hostname = "firewall"
+      fire_config.vm.network "private_network", ip: "192.168.52.1", virtualbox__inet: "clients_net"
+      fire_config.vm.network "private_network", ip: "192.168.50.2", virtualbox__inet: "server_net"
+      fire_config.vm.network "public_network"
+      fire_config.vm.synced_folder "firewall", "/home/vagrant/firewall"
+      fire_config.vm.provider "virtualbox" do |vb|
+        vb.name = "firewall"
+        opts = ["modifyvm", :id, "--natdnshostresolver1", "on"]
+        vb.customize opts
+        vb.memory = "1024"
+      end
+      fire_config.vm.provision "shell", path: "bootstrap-firewall.sh"
+  end
+
+
   # create webserver
 	config.vm.define "web" do |web_config|
       web_config.vm.box = "ubuntu/bionic64"
       web_config.vm.hostname = "webserver"
-      web_config.vm.network "private_network", ip: "192.168.50.10"
+      web_config.vm.network "private_network", ip: "192.168.50.10", virtualbox__inet: "server_net"
       web_config.vm.synced_folder "website", "/home/vagrant/website"
       web_config.vm.provider "virtualbox" do |vb|
       	vb.name = "webserver"
@@ -24,29 +43,13 @@ Vagrant.configure("2") do |config|
 
 
 
-  # create firewall
-  config.vm.define "firewall" do |fire_config|
-      fire_config.vm.box = "ubuntu/bionic64"
-      fire_config.vm.hostname = "firewall"
-      fire_config.vm.network "private_network", ip: "192.168.50.2"
-      fire_config.vm.network "private_network", ip: "192.168.52.1"
-      fire_config.vm.synced_folder "firewall", "/home/vagrant/firewall"
-      fire_config.vm.provider "virtualbox" do |vb|
-        vb.name = "firewall"
-        opts = ["modifyvm", :id, "--natdnshostresolver1", "on"]
-        vb.customize opts
-        vb.memory = "1024"
-      end
-      fire_config.vm.provision "shell", path: "bootstrap-firewall.sh"
-  end
-
   # create some clients
   # https://docs.vagrantup.com/v2/vagrantfile/tips.html
   (1..1).each do |i|
     config.vm.define "client#{i}" do |node|
         node.vm.box = "ubuntu/bionic64"
         node.vm.hostname = "client#{i}"
-        node.vm.network "private_network", ip: "192.168.52.#{20+i}"
+        node.vm.network "private_network", ip: "192.168.52.#{20+i}", virtualbox__inet: "clients_net"
         node.vm.synced_folder "client", "/home/vagrant/client"
         node.vm.provider "virtualbox" do |vb|
         	vb.gui = true
